@@ -1,3 +1,8 @@
+2007-01-04  Mike Cvet  <mcvet@redhat.com>
+
+	* cni/FrameCursor.cxx (create_frame_cursor): Resolve frame address
+	from unw_get_proc_info independently of function name. Fixes #3791.
+
 2006-12-14  Adam Jocksch  <ajocksch@redhat.com>
 
 	* FrameCursor.java (getAddress): Added.
